--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ body,html {
     color: #800000;
 }
 
-.tableholder {
+#tableholder {
     
     background-color: #dddddd;
     margin-top: 60px;
