--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,10 @@ tr:nth-child(even) {
 }
 
 
+table tr td:nth-of-type(2) { /* Select the 3rd td */
+  cursor: pointer;
+}
+
 /*form input styling*/
 
 
@@ -241,7 +245,7 @@ select:focus{
 #yearHeader {
     background: rgba(128, 128, 128, 0.5);
     top: 10px;
-    left: 10px;
+    left: 100px;
     position: absolute;
     z-index: 50;
     text-align: center;
