--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body,html {
     z-index: 100;
     min-height: 100%;
     max-height: 100%;
-    left: 0px;
+    right: 0px;
     top: 0px;
     background-color: #212121;
     color: #141414;
@@ -169,7 +169,7 @@ select:focus{
     position: absolute;
     z-index: 100;
     min-height: 250px;
-    left: 0px;
+    right: 0px;
     top: 0px;
     background-color: #212121;
     color: #dddddd;
@@ -245,7 +245,7 @@ select:focus{
 #yearHeader {
     background: rgba(128, 128, 128, 0.5);
     top: 10px;
-    left: 50px;
+    left: 80px;
     position: absolute;
     z-index: 50;
     text-align: center;
@@ -257,3 +257,71 @@ h3{
     margin-top: 0px;
     margin-bottom: 0px;
 }
+
+
+/*styling popup */
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  visibility: hidden;
+  opacity: 0;
+    z-index: 11;
+}
+
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 90px auto;
+  padding: 20px;
+  background: #e8e8e8;
+  border-radius: 5px;
+  width: 50%;
+  position: relative;
+    z-index: 1000;
+    font-family: 'mukta', sans-serif;
+    line-height: 1.5;
+    font-size: 1.2vw;
+}
+
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: 'mukta', sans-serif;
+    line-height: 1.3;
+    text-align: center;
+    padding-right: 8%;
+    padding-left: 8%;
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+    
+}
+.popup .close:hover {
+  color: #50326E;
+    
+}
+.popup .content {
+  /*overflow: auto;*/
+}
+
+/*end styling popup*/
+
+
+a.specialLink { 
+    color: inherit; 
+    text-decoration: none;
+} 
